--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -12,7 +12,26 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<examples>
+monitor_speed= 112500
+; lib_deps = 
+; 	robtillaart/AS5600@^0.3.6
+; 	pololu/VL53L0X@^1.3.1
+
+[env:AS5600]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> 
+monitor_speed= 112500
 lib_deps = 
-	roboticsbrno/ServoESP32@^1.0.3
 	robtillaart/AS5600@^0.3.6
+
+[env:VL53]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>
+monitor_speed= 112500
+lib_deps = 
 	pololu/VL53L0X@^1.3.1
