--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -35,3 +35,13 @@ src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>
 monitor_speed= 112500
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
+
+
+[env:Motor]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> 
+monitor_speed= 112500
+; lib_deps = 
+	
