--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -13,35 +13,39 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<examples>
-monitor_speed= 112500
-; lib_deps = 
-; 	robtillaart/AS5600@^0.3.6
-; 	pololu/VL53L0X@^1.3.1
+monitor_speed = 112500
+lib_deps = 
+	rb-enantel/RC_ESC@^1.1.0
+	madhephaestus/ESP32Servo@^0.13.0
 
 [env:AS5600]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> 
-monitor_speed= 112500
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53>
+monitor_speed = 112500
 lib_deps = 
 	robtillaart/AS5600@^0.3.6
+	rb-enantel/RC_ESC@^1.1.0
+	madhephaestus/ESP32Servo@^0.13.0
 
 [env:VL53]
 platform = espressif32
 board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>
-monitor_speed= 112500
+monitor_speed = 112500
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
-
+	rb-enantel/RC_ESC@^1.1.0
+	madhephaestus/ESP32Servo@^0.13.0
 
 [env:Motor]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> 
-monitor_speed= 112500
-; lib_deps = 
-	
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53>
+monitor_speed = 112500
+lib_deps = 
+	rb-enantel/RC_ESC@^1.1.0
+	madhephaestus/ESP32Servo@^0.13.0
