--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -21,7 +21,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> -<examples/mpu>
 monitor_speed = 112500
 lib_deps = 
 	robtillaart/AS5600@^0.3.6
@@ -32,7 +32,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/mpu>
 monitor_speed = 112500
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
@@ -43,8 +43,18 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu>
 monitor_speed = 112500
 lib_deps = 
 	rb-enantel/RC_ESC@^1.1.0
 	madhephaestus/ESP32Servo@^0.13.0
+
+[env:MPU]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor> 
+monitor_speed = 9600
+lib_deps = 
+	Wire
+	electroniccats/MPU6050@^0.6.0
