--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -22,7 +22,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> -<examples/mpu>-<examples/IR>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	robtillaart/AS5600@^0.3.6
@@ -34,7 +34,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/mpu>-<examples/IR>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/mpu>-<examples/IR>-<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	pololu/VL53L0X@^1.3.1
@@ -46,7 +46,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu>-<examples/IR>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	rb-enantel/RC_ESC@^1.1.0
@@ -57,7 +57,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor> -<examples/IR>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor> -<examples/IR>-<examples/ledRgb>
 monitor_speed = 9600
 lib_deps = 
 	Wire
@@ -68,6 +68,13 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/ledRgb>
 monitor_speed = 9600
 lib_deps = z3t0/IRremote@^4.1.2
+
+[env:LED_RGB]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>
+monitor_speed = 9600
