--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -22,12 +22,11 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/sensor_de_refletancia> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	robtillaart/AS5600@^0.3.6
-	rb-enantel/RC_ESC@^1.1.0
-	madhephaestus/ESP32Servo@^0.13.0
+
 	
 
 [env:VL53]
