--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -24,7 +24,8 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/sensor_de_refletancia> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
-lib_deps = 
+lib_deps =
+	
 	robtillaart/AS5600@^0.3.6
 
 	
@@ -45,10 +46,9 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
-	rb-enantel/RC_ESC@^1.1.0
 	madhephaestus/ESP32Servo@^0.13.0
 	
 
@@ -84,3 +84,12 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
+
+[env:Motor_encoder]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+monitor_speed = 112500
+lib_deps = 
+	madhephaestus/ESP32Servo@^0.13.0
