--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -89,7 +89,14 @@ monitor_speed = 112500
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5040_GRAV> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
+
+[env:AS5040_GRAV]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder>-<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+monitor_speed = 112500
