--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -16,7 +16,7 @@ src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
-	
+	pololu/VL53L0X@^1.3.1
 
 [env:AS5600]
 platform = espressif32
@@ -24,23 +24,17 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/sensor_de_refletancia> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
-lib_deps =
-	
+lib_deps = 
 	robtillaart/AS5600@^0.3.6
-
-	
+	pololu/VL53L0X@^1.3.1
 
 [env:VL53]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/mpu>-<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
-lib_deps = 
-	pololu/VL53L0X@^1.3.1
-	rb-enantel/RC_ESC@^1.1.0
-	madhephaestus/ESP32Servo@^0.13.0
-	
+lib_deps = pololu/VL53L0X@^1.3.1
 
 [env:Motor]
 platform = espressif32
@@ -50,18 +44,16 @@ src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> 
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
-	
 
 [env:MPU]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor> -<examples/IR>-<examples/ledRgb> -<examples/sensor_de_refletancia>
-monitor_speed = 9600
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia> -<examples/IR>  -<examples/ledRgb>
+monitor_speed = 112500
 lib_deps = 
 	Wire
 	electroniccats/MPU6050@^0.6.0
-	
 
 [env:IR]
 platform = espressif32
@@ -69,7 +61,8 @@ board = esp32dev
 framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/ledRgb> -<examples/sensor_de_refletancia>
 monitor_speed = 112500
-lib_deps = z3t0/IRremote@^4.1.2
+lib_deps = 
+	z3t0/IRremote@^4.1.2
 
 [env:LED_RGB]
 platform = espressif32
@@ -85,6 +78,7 @@ framework = arduino
 src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 
+
 [env:Motor_encoder]
 platform = espressif32
 board = esp32dev
@@ -94,9 +88,3 @@ monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
 
-[env:AS5040_GRAV]
-platform = espressif32
-board = esp32dev
-framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder>-<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
-monitor_speed = 112500
