add programação AS5040

--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -88,3 +88,9 @@ monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
 
+[env:AS5040_GRAVACAO]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+monitor_speed = 112500
