--- a/Main/Firmware/platformio.ini
+++ b/Main/Firmware/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<examples>
+build_src_filter = +<*> -<.git/> -<.svn/> -<examples>
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
@@ -22,7 +22,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/sensor_de_refletancia> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/sensor_de_refletancia> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	robtillaart/AS5600@^0.3.6
@@ -32,7 +32,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = pololu/VL53L0X@^1.3.1
 
@@ -40,7 +40,7 @@ lib_deps = pololu/VL53L0X@^1.3.1
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
@@ -49,7 +49,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	Wire
@@ -59,7 +59,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/ledRgb> -<examples/sensor_de_refletancia>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/ledRgb> -<examples/sensor_de_refletancia>
 monitor_speed = 112500
 lib_deps = 
 	z3t0/IRremote@^4.1.2
@@ -68,14 +68,14 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR> -<examples/sensor_de_refletancia>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR> -<examples/sensor_de_refletancia>
 monitor_speed = 112500
 
 [env:sensor_de_refletancia]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5600> -<examples/VL53> -<examples/motor>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 
 
@@ -83,7 +83,7 @@ monitor_speed = 112500
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5040_GRAV> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/AS5040_GRAV> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
 lib_deps = 
 	madhephaestus/ESP32Servo@^0.13.0
@@ -92,5 +92,5 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
+build_src_filter = +<*> -<.git/> -<.svn/> -<main> -<examples/Motor_encoder> -<examples/AS5600> -<examples/motor> -<examples/VL53> -<examples/sensor_de_refletancia>-<examples/mpu> -<examples/IR>  -<examples/ledRgb>
 monitor_speed = 112500
